src/objects/OpportunityPlatform__c.object
<CustomObject>
    <fields>
        <fullName>Account_Entity__c</fullName>
        <label>Account Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>app_custom_event.fb_mobile_achievement_unlocked</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_activate_app</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_payment_info</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_to_cart</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_to_wishlist</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_complete_registration</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_content_view</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_initiated_checkout</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_level_achieved</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_purchase</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_rate</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_search</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_spent_credits</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_tutorial_completion</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.other</fullName>
                </value>
                <value>
                    <fullName>app_install</fullName>
                </value>
                <value>
                    <fullName>app_use</fullName>
                </value>
                <value>
                    <fullName>checkin</fullName>
                </value>
                <value>
                    <fullName>comment</fullName>
                </value>
                <value>
                    <fullName>credit_spent</fullName>
                </value>
                <value>
                    <fullName>games.plays</fullName>
                </value>
                <value>
                    <fullName>landing_page_view</fullName>
                </value>
                <value>
                    <fullName>leadgen.other</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>link_click</fullName>
                </value>
                <value>
                    <fullName>mobile_app_install</fullName>
                </value>
                <value>
                    <fullName>offsite_conversion.fb_pixel_add_payment_info</fullName>
                </value>
                <value>
                    <fullName>offsite_conversion.fb_pixel_add_to_cart</fullName>
                </value>
                <value>
                    <fullName>offsite_conversion.fb_pixel_add_to_wishlist</fullName>
                </value>
                <value>
                    <fullName>offsite_conversion.fb_pixel_complete_registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Selected__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>13-17</fullName>
                </value>
                <value>
                    <fullName>18-20</fullName>
                </value>
                <value>
                    <fullName>18-24</fullName>
                </value>
                <value>
                    <fullName>21-24</fullName>
                </value>
                <value>
                    <fullName>25-34</fullName>
                </value>
                <value>
                    <fullName>35+</fullName>
                </value>
                <value>
                    <fullName>35-44</fullName>
                </value>
                <value>
                    <fullName>35-54</fullName>
                </value>
                <value>
                    <fullName>45-54</fullName>
                </value>
                <value>
                    <fullName>55+</fullName>
                </value>
                <value>
                    <fullName>55-64</fullName>
                </value>
                <value>
                    <fullName>65+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_max__c</fullName>
        <label>Age Max</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_min__c</fullName>
        <label>Age Min</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Lift_Study__c</fullName>
        <label>Brand Lift Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPAC__c</fullName>
        <inlineHelpText>Cost Per App Click</inlineHelpText>
        <label>CPAC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPA__c</fullName>
        <description>Cost Per Acquisition</description>
        <label>CPA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPCO__c</fullName>
        <label>CPCO</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPCV__c</fullName>
        <label>CPCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPC__c</fullName>
        <inlineHelpText>Cost per Click</inlineHelpText>
        <label>CPC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPDPV__c</fullName>
        <description>Cost per Detailed Page View</description>
        <label>CPDPV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPER__c</fullName>
        <description>Cost per Event Response</description>
        <label>CPER</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPE__c</fullName>
        <inlineHelpText>Cost Per Engagement (Retweets, Replies etc.)</inlineHelpText>
        <label>CPE</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <inlineHelpText>Cost per Follower</inlineHelpText>
        <label>CPF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPI__c</fullName>
        <description>Cost Per Install</description>
        <label>CPI</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPLC__c</fullName>
        <description>Cost Per Link Click</description>
        <label>CPLC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPLP__c</fullName>
        <inlineHelpText>Landing Page View</inlineHelpText>
        <label>CPLP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPL__c</fullName>
        <inlineHelpText>Cost per Lead</inlineHelpText>
        <label>CPL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <inlineHelpText>Cost Per Thousand Impressions</inlineHelpText>
        <label>CPM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPPL__c</fullName>
        <description>Cost per Page Like</description>
        <label>CPPL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPSU__c</fullName>
        <description>Cost Per Swipe Up</description>
        <label>CPSU</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPS__c</fullName>
        <description>Cost per Share</description>
        <label>CPS</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPVC__c</fullName>
        <description>Cost per Video Completion</description>
        <label>CPVC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPV__c</fullName>
        <inlineHelpText>Cost Per View</inlineHelpText>
        <label>CPV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTA_Overlay_Text__c</fullName>
        <label>CTA Overlay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companion_Banner__c</fullName>
        <label>Companion Banner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunity Platforms</relationshipLabel>
        <relationshipName>ContractPlatforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostStructure__c</fullName>
        <label>Cost Structure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPAC</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPE</fullName>
                </value>
                <value>
                    <fullName>CPER</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPLC</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPPL</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CPSU</fullName>
                </value>
                <value>
                    <fullName>CPV</fullName>
                </value>
                <value>
                    <fullName>CPLP</fullName>
                </value>
                <value>
                    <fullName>CPCO</fullName>
                </value>
                <value>
                    <fullName>CPVC</fullName>
                </value>
                <value>
                    <fullName>CPDPV</fullName>
                </value>
                <value>
                    <fullName>CPCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Structure_Metrics__c</fullName>
        <description>Selected Metrics for Cost Structures</description>
        <label>Cost Structure Metrics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_page__c</fullName>
        <label>Facebook Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Selected__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoCostStructure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cost Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Selected__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>App Installs</fullName>
                </value>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Boost Engagement</fullName>
                </value>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Conversions</fullName>
                </value>
                <value>
                    <fullName>Drive Installs of My App</fullName>
                </value>
                <value>
                    <fullName>Drive Traffic to App</fullName>
                </value>
                <value>
                    <fullName>Drive Traffic to My Website</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Event Responses</fullName>
                </value>
                <value>
                    <fullName>Get People to View My Content</fullName>
                </value>
                <value>
                    <fullName>Grow Awareness</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Local Awareness</fullName>
                </value>
                <value>
                    <fullName>Offer Claims</fullName>
                </value>
                <value>
                    <fullName>Page Likes</fullName>
                </value>
                <value>
                    <fullName>Post Engagements</fullName>
                </value>
                <value>
                    <fullName>Product Catalogue Sales</fullName>
                </value>
                <value>
                    <fullName>Reach</fullName>
                </value>
                <value>
                    <fullName>Store Visits</fullName>
                </value>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Tweet Engagements</fullName>
                </value>
                <value>
                    <fullName>Video Views</fullName>
                </value>
                <value>
                    <fullName>Website Conversions</fullName>
                </value>
                <value>
                    <fullName>Website Traffic</fullName>
                </value>
                <value>
                    <fullName>Website Visits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Ad_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Ad Placement</label>
        <referenceTo>OpportunityAdPlacement__c</referenceTo>
        <relationshipLabel>Opportunity Platforms</relationshipLabel>
        <relationshipName>Opportunity_Platforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Platforms</relationshipLabel>
        <relationshipName>OpportunityPlatforms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Pixel_Tracking__c</fullName>
        <label>Tags</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatformAccount__c</fullName>
        <label>Platform Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Selected__c</fullName>
        <label>Platform Selected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AdWords CPM</fullName>
                </value>
                <value>
                    <fullName>DBM RTB</fullName>
                </value>
                <value>
                    <fullName>DBM TrueView</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google Display Network</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Pinterest</fullName>
                </value>
                <value>
                    <fullName>Snapchat</fullName>
                </value>
                <value>
                    <fullName>TrueView</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>TikTok</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <referenceTo>Platform__c</referenceTo>
        <relationshipLabel>Opportunity Platforms</relationshipLabel>
        <relationshipName>OpportunityPlatforms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <formula>text(Platform__r.Provider__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <label>Salesforce_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VariableCPAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPCV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPCV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPDPV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPDPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Variable Cost per Event Response</description>
        <label>Variable CPER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPLP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Variable Cost per Page Like</description>
        <label>Variable CPPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPSU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPSU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Variable Cost per Share</description>
        <label>Variable CPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPVC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VariableCPV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable CPV</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Platform</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Opportunity Platform</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Platforms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AgeMinMinimum13</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Age_min__c) &amp;&amp;
Age_min__c&lt;13</errorConditionFormula>
        <errorDisplayField>Age_min__c</errorDisplayField>
        <errorMessage>Minimum Age is 13</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CompanionBannerTagsRequired</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ispickval(Opportunity__r.StageName,&quot;Closed Won&quot;) &amp;&amp;
(isblank(text(Pixel_Tracking__c)) ||
isblank(text(Companion_Banner__c)))</errorConditionFormula>
        <errorMessage>Companion Banner and Tags values are required for AdWords campaigns</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DefineCostStructures</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(NoCostStructure__c), ISBLANK(CostStructure__c))</errorConditionFormula>
        <errorDisplayField>CostStructure__c</errorDisplayField>
        <errorMessage>Please define Cost Structures</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FB_Account_Entity_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>(Platform__r.Name = &quot;Facebook&quot; || 
Platform__r.Name = &quot;Instagram&quot;) &amp;&amp; 
!ISBLANK(PlatformAccount__c) &amp;&amp;
ISPICKVAL(Account_Entity__c,&quot;&quot;) &amp;&amp;
!ISBLANK(Contract__c)</errorConditionFormula>
        <errorDisplayField>Account_Entity__c</errorDisplayField>
        <errorMessage>Select Account Entity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KPIrequiredOnClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
TEXT( Opportunity__r.StageName ) == &apos;Closed Won&apos; &amp;&amp;
ISBLANK(KPI__c)</errorConditionFormula>
        <errorDisplayField>KPI__c</errorDisplayField>
        <errorMessage>Please fill in KPI</errorMessage>
    </validationRules>
</CustomObject>